@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-01T16:23:44Z",
+  "timestamp" : "2022-07-02T01:19:01Z",
   "count_outdated" : 366,
   "uniques_outdated" : 210,
-  "count" : 392,
+  "count" : 393,
   "uniques" : 226,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     }
