@@ -1,3 +1,10 @@
+2022-07-02T01:19:01Z:
+* notice: last 14d: unq all: 4 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 210 366 / 226 392
+* notice: next accum: outdated-unq outdated-all / unq all: 210 366 / 226 393
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2022-07-01]
+
 2022-07-01T16:23:44Z:
 * notice: last 14d: unq all: 4 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 209 365 / 225 390
